<resources>
    <string name="app_name" translatable="false">MyUNIMIB</string>
    <string name="account_type" translatable="false">UNIMIB</string>
    <string name="content_authority" translatable="false">it.communikein.myunimib</string>
    <string name="file_provider_authority" translatable="false">it.communikein.myunimib.fileprovider</string>
    <string name="asset_statements" translatable="false">[{\n  \"relation\": [\"delegate_permission/common.handle_all_urls\"],\n  \"target\": {\n    \"namespace\": \"web\",\n    \"site\": \"https://communikein.github.io\",\n  }\n}]</string>
    <string name="channel_booklet_id">it.communikein.myunimib.booklet</string>
    <string name="channel_booklet_name">Booklet</string>
    <string name="channel_booklet_content_changes">Changes in the booklet detected.</string>
    <string name="channel_available_exams_id">it.communikein.myunimib.available</string>
    <string name="channel_available_exams_name">Available Exams</string>
    <string name="channel_available_exams_content_changes">Changes in the available exams detected.</string>
    <string name="channel_enrolled_exams_id">it.communikein.myunimib.enrolled</string>
    <string name="channel_enrolled_exams_name">Enrolled Exams</string>
    <string name="channel_enrolled_exams_content_changes">Changes in the enrolled exams detected.</string>
    <string name="nav_home">@string/title_home</string>
    <string name="nav_timetable">@string/title_timetable</string>
    <string name="nav_booklet">@string/title_booklet</string>
    <string name="nav_exams_available">@string/title_exams_available</string>
    <string name="nav_exams_enrolled">@string/title_exams_enrolled</string>
    <string name="title_login">Sign in</string>
    <string name="title_home">Home</string>
    <string name="title_timetable">Timetable</string>
    <string name="title_booklet">Booklet</string>
    <string name="title_exams_available">Available Exams</string>
    <string name="title_exams_enrolled">Enrolled Exams</string>
    <string name="title_settings">Settings</string>
    <string name="prompt_university_email">Enter university e-mail address</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="label_do_fake_login">Do fake login</string>
    <string name="terms_and_conditions">By proceeding you accept this service\'s Terms and Conditions.</string>
    <string name="error_user_invalid">Username not valid</string>
    <string name="error_user_empty">Username required</string>
    <string name="error_user_with_blank_spaces">The username can\'t contain blank spaces</string>
    <string name="error_password_incorrect">Password not valid</string>
    <string name="error_username_password_incorrect">Username or password not valid</string>
    <string name="error_password_empty">Password required</string>
    <string name="error_password_less_then_10_chars">The password must be at least 10 chars</string>
    <string name="error_password_more_then_20_chars">The password must be no more than 20 chars</string>
    <string name="error_password_less_then_2_digits">The password must contain at least two digits [0–9]</string>
    <string name="label_logging_in">Login in progress..</string>
    <string name="choose_faculty">Choose faculty</string>
    <string name="faculty_to_choose">Almost there, choose the faculty now</string>
    <string name="error_S3_not_available">S3 not available.</string>
    <string name="error_connection_timeout">Connection timeout</string>
    <string name="error_generic_exception">Error generic.</string>
    <string name="terms_not_checked">Please, accept the terms before using this service</string>
    <string name="permissions_granted">Thanks for the trust ;)</string>
    <string name="error_permission_accounts_necessary">I need this permission to create an account :(</string>
    <string name="label_logging_out">Log out in progress..</string>
    <string name="dialog_logout">Logout</string>
    <string name="dialog_logout_message_ok">Logout completed.</string>
    <string name="error_logout_failed">Something went wrong when trying to logout.\nLogout failed.</string>
    <string name="error_logout_cancelled">The logout process has been cancelled.</string>
    <string name="error_logout_user_not_removed">The user has not been removed.</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_key" translatable="false">pref-sync-frequency</string>
    <string name="pref_sync_frequency_label_5">5 minutes</string>
    <string name="pref_sync_frequency_label_15">15 minutes</string>
    <string name="pref_sync_frequency_label_30">30 minutes</string>
    <string name="pref_sync_frequency_label_60">1 hour</string>
    <string name="pref_sync_frequency_label_180">3 hours</string>
    <string name="pref_sync_frequency_label_360">6 hours</string>
    <string name="pref_sync_frequency_label_0">Never</string>
    <string name="pref_sync_frequency_5" translatable="false">5</string>
    <string name="pref_sync_frequency_15" translatable="false">15</string>
    <string name="pref_sync_frequency_30" translatable="false">30</string>
    <string name="pref_sync_frequency_60" translatable="false">60</string>
    <string name="pref_sync_frequency_180" translatable="false">180</string>
    <string name="pref_sync_frequency_360" translatable="false">360</string>
    <string name="pref_sync_frequency_0" translatable="false">0</string>
    <string name="pref_title_network_type">Network Type</string>
    <string name="pref_network_type_key" translatable="false">pref-network-type</string>
    <string name="pref_network_type_label_cellular">Cellular</string>
    <string name="pref_network_type_label_wifi">Wi-Fi</string>
    <string name="pref_network_type_label_both">Cellular &amp; Wi-Fi</string>
    <string name="pref_network_type_cellular" translatable="false">cellular</string>
    <string name="pref_network_type_wifi" translatable="false">wifi</string>
    <string name="pref_network_type_both" translatable="false">both</string>
    <string name="score_out_of_label">/ 30</string>
    <string name="cfu_label">CFU</string>
    <string name="label_exam_location">WHERE</string>
    <string name="holder_exam_location">Milano, U14-T04</string>
    <string name="label_exam_description">WHAT</string>
    <string name="holder_exam_description">Prova orale</string>
    <string name="label_exam_date">WHEN</string>
    <string name="holder_exam_date">Wed, 14 November</string>
    <string name="label_exam_teachers">WHO</string>
    <string name="holder_exam_teachers">Docente primo,\nDocente secondo</string>
    <string name="label_exam_begin_enrollment">ENROLLMENT BEGINS</string>
    <string name="holder_exam_begin_enrollment">Mon, 12 November</string>
    <string name="label_exam_end_enrollment">ENROLLMENT ENDS</string>
    <string name="holder_exam_end_enrollment">Fri, 16 November</string>
    <string name="error_exam_missing_room">No room info available</string>
    <string name="error_exam_missing_location">No location info available</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="yesterday">Yesterday</string>
    <string name="attention_title">Attention</string>
    <string name="action_go">Go</string>
    <string name="action_ok">OK</string>
    <string name="open">Open</string>
    <string name="retry">Retry</string>
    <string name="error_no_internet">No internet available :(</string>
    <string name="title_questionnaire">Questionnaire</string>
    <string name="error_questionnaire_to_fill">Attention, you need to fill the questionnaire before enrolling in this exam.</string>
    <string name="action_show_questionnaire">Fill it</string>
    <string name="title_enrollment_completed">Enrollment Completed</string>
    <string name="enrollment_completed_info">You are enrolled in this exam. To be sure, I\'ve downloaded a certificate of your enrollment, do you want to see it?</string>
    <string name="enrollment_not_completed">Enrollment not completed.</string>
    <string name="enrolled_exam_certificate_downloaded">Certificate downloaded</string>
    <string name="error_enrolled_exam_missing">Enrolled exam\'s info missing</string>
    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_fake_login">Try the app</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_enroll_exam">Enroll exam</string>
    <string name="holder_user_name">Brambilla Fumagalli</string>
    <string name="holder_user_email">brambilla.fumagalli@gmail.com</string>
    <string name="profile_picture_description">User\'s profile picture</string>
    <string name="close">close</string>
    <string name="title_share">Share</string>
    <string name="title_logout">Logout</string>
    <string name="milan">Milan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_buildings">Buildings</string>
    <string name="label_time_start">08.00</string>
    <string name="label_time_end">10.00</string>
    <string name="label_course_name">Fondamenti di Informatica</string>
    <string name="label_classroom">U14-T024</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="prompt_course_name">Course name</string>
    <string name="prompt_lesson_building">Building</string>
    <string name="prompt_lesson_class">Room</string>
    <string name="prompt_start_time">Start</string>
    <string name="prompt_end_time">End</string>
    <string name="saving_lesson">Lesson save in progress..</string>
    <string name="label_new_lesson_main_data">Main data</string>
    <string name="label_new_lesson_time_data">Time</string>
    <string name="label_new_lesson_time_data_from">FROM</string>
    <string name="label_new_lesson_time_data_to">TO</string>
    <string name="lesson_name_description">Course name</string>
    <string name="lesson_location_description">Lesson location</string>
    <string name="time_format">%1$s.%2$s</string>
    <string name="confirm_discard">Do you want to discard the changes?</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="label_confirm">Are you sure?</string>
    <string name="label_lesson_deleted">Lesson deleted</string>
    <string name="label_loading_lesson">Loading lesson\'s data</string>
    <string name="action_delete_lesson">Delete lesson</string>
    <string name="university_view">University</string>
    <string name="error_missing_course_name">Insert course name</string>
    <string name="error_missing_building">Select building</string>
    <string name="error_missing_room">Insert room</string>
    <string name="error_missing_start_time">Insert start time</string>
    <string name="error_missing_end_time">Insert end time</string>
    <string name="error_time_end_before_start">Insert a valid start and end time</string>
    <string name="lesson_added">Lesson added!</string>
    <string name="action_discarded">Cancelled!</string>
    <string name="action_show_attachment">Attachment</string>
    <string name="label_unenroll_in_progress">Unenrollment in progress</string>
    <string name="label_loading_certificate">Loading certificate</string>
    <string name="title_graduation_score_prevision">Graduation score projection</string>
    <string name="student_summary_title">Career summary</string>
</resources>