<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single"
        android:id="@+id/navigation_home_group">

        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home" />

        <item
            android:id="@+id/navigation_buildings"
            android:icon="@drawable/ic_location_city_black_24dp"
            android:title="@string/title_buildings" />

        <item
            android:id="@+id/navigation_timetable"
            android:icon="@drawable/ic_today_black_24dp"
            android:title="@string/title_timetable" />

        <item
            android:id="@+id/navigation_graduation_score"
            android:icon="@drawable/ic_school_black"
            android:title="@string/title_graduation_score_prevision" />

    </group>

    <group
        android:checkableBehavior="single"
        android:id="@+id/navigation_pref_group">

        <item
            android:id="@+id/navigation_share"
            android:title="@string/title_share"
            android:icon="@drawable/ic_share_black_24dp" />

        <item
            android:id="@+id/navigation_settings"
            android:title="@string/title_settings"
            android:icon="@drawable/ic_settings_black_24dp" />

        <item
            android:id="@+id/navigation_logout"
            android:title="@string/title_logout"
            android:icon="@drawable/ic_logout_black_24dp"/>

    </group>

</menu>
