<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/loginView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity">

            <EditText
                android:id="@+id/editTextUniversityMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                tools:text="e.maracani"
                android:hint="@string/prompt_university_email"/>

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                tools:text="@string/prompt_password"
                app:layout_constraintEnd_toEndOf="@+id/editTextUniversityMail"
                app:layout_constraintStart_toStartOf="@+id/editTextUniversityMail"
                app:layout_constraintTop_toBottomOf="@+id/editTextUniversityMail" />

            <CheckBox
                android:id="@+id/terms_check"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/terms_and_conditions"
                app:layout_constraintTop_toBottomOf="@id/editTextPassword"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <CheckBox
                android:id="@+id/fake_login_check"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_do_fake_login"
                app:layout_constraintTop_toBottomOf="@id/terms_check"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fake_login_check" />

            <TextView
                android:id="@+id/coursesLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_faculty"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
                app:layout_constraintStart_toStartOf="@+id/buttonLogin"
                app:layout_constraintTop_toBottomOf="@id/buttonLogin" />

            <Spinner
                android:id="@+id/coursesSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/coursesLabel"
                app:layout_constraintStart_toStartOf="@+id/coursesLabel"
                app:layout_constraintTop_toBottomOf="@id/coursesLabel"/>

            <Button
                android:id="@+id/dialogButtonOK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@android:string/ok"
                app:layout_constraintEnd_toEndOf="@+id/coursesSpinner"
                app:layout_constraintStart_toStartOf="@+id/coursesSpinner"
                app:layout_constraintTop_toBottomOf="@id/coursesSpinner" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</layout>