<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget_container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_summary_title"
        android:textSize="18sp"
        android:fontFamily="sans-serif-light"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/averageMarkTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/primary_text"
            android:textStyle="bold"
            android:textSize="36sp"
            android:text="FAKE"/>

        <TextView
            android:id="@+id/mark_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_out_of_label"
            android:textSize="18sp"
            android:fontFamily="sans-serif-light"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cfuTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:textStyle="bold"
            android:textColor="@color/primary_text"
            android:textSize="26sp"
            android:text="FAKE"/>

        <TextView
            android:id="@+id/cfu_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/cfu_label"
            android:textSize="18sp"
            android:fontFamily="sans-serif-light" />

    </LinearLayout>

</LinearLayout>